# sxrsdk

SXR/Extensions/MixedReality/: build.gradle
SXR/Extensions/gradle/wrapper/: gradle-wrapper.properties
SXR/Extensions/sxr-physics/: build.gradle
SXR/Extensions/sxr-physics/build_bullet/bullet3/: build.gradle
SXR/Extensions/sxr-physics/bullet3/: build.gradle
SXR/Extensions/sxr-physics/src/main/jni/: CMakeLists.txt
SXR/Extensions/sxr-physics/src/main/jni/bullet3/include/BulletDynamics/Featherstone/: btMultiBodyFixedConstraint.h  btMultiBodyPoint2Point.h  btMultiBodySliderConstraint.h
SXR/Extensions/sxr-physics/src/main/jni/bullet3/urdfimporter/: BulletUrdfImporter.cpp  BulletUrdfImporter.h  MultiBodyCreationInterface.h  URDF2Bullet.cpp  URDFConverter.cpp  URDFConverter.h  UrdfFindMeshFile.h  UrdfParser.cpp
SXR/Extensions/sxr-physics/src/main/jni/bullet3/urdfimporter/meshimport/: LoadMeshFromCollada.cpp  LoadMeshFromObj.cpp  LoadMeshFromObj.h  Wavefront2GLInstanceGraphicsShape.cpp  Wavefront2GLInstanceGraphicsShape.h  b3ImportMeshUtility.cpp  tiny_obj_loader.cpp
SXR/Extensions/sxr-physics/src/main/jni/engine/: physics_collidable.h  physics_conetwistconstraint_jni.cpp  physics_constraint.h  physics_constraint_jni.cpp  physics_fixedconstraint.h  physics_genericconstraint.h  physics_genericconstraint_jni.cpp  physics_hingeconstraint.h  physics_hingeconstraint_jni.cpp  physics_joint.h  physics_joint_jni.cpp  physics_loader.h  physics_loader_jni.cpp  physics_point2pointconstraint_jni.cpp  physics_rigidbody.h  physics_rigidbody_jni.cpp  physics_sliderconstraint.h  physics_sliderconstraint_jni.cpp  physics_world.h  physics_world_jni.cpp
SXR/Extensions/sxr-physics/src/main/jni/engine/bullet/: bullet_conetwistconstraint.cpp  bullet_conetwistconstraint.h  bullet_fileloader.cpp  bullet_fileloader.h  bullet_fixedconstraint.cpp  bullet_fixedconstraint.h  bullet_generic6dofconstraint.cpp  bullet_generic6dofconstraint.h  bullet_hingeconstraint.cpp  bullet_hingeconstraint.h  bullet_joint.cpp  bullet_joint.h  bullet_jointmotor.cpp  bullet_jointmotor.h  bullet_loader_jni.cpp  bullet_point2pointconstraint.cpp  bullet_point2pointconstraint.h  bullet_rigidbody.cpp  bullet_rigidbody.h  bullet_root_joint.cpp  bullet_sliderconstraint.cpp  bullet_sliderconstraint.h  bullet_sxr_utils.cpp  bullet_sxr_utils.h  bullet_universalconstraint.cpp  bullet_universalconstraint.h  bullet_world.cpp  bullet_world.h  fmemopen.cpp  stdioext.h
SXR/Extensions/widgetLib/: build.gradle
SXR/Extensions/widgetLib/src/com/samsungxr/widgetlib/adapter/: ListDataSet.java
SXR/Extensions/widgetLib/src/com/samsungxr/widgetlib/log/: Log.java
SXR/Extensions/widgetLib/src/com/samsungxr/widgetlib/main/: CommandBuffer.java  MainScene.java  TextureFutureHelper.java  WidgetLib.java
SXR/Extensions/widgetLib/src/com/samsungxr/widgetlib/widget/: BoundingBox.java  GroupWidget.java  Widget.java
SXR/SDK/: build.gradle
SXR/SDK/backend_daydream/: build.gradle
SXR/SDK/backend_monoscopic/: build.gradle
SXR/SDK/backend_monoscopic/src/main/jni/: Application.mk
SXR/SDK/backend_oculus/: build.gradle
SXR/SDK/backend_oculus/src/main/java/com/samsungxr/: OvrViewManager.java
SXR/SDK/backend_oculus/src/main/jni/: ovr_activity.cpp
SXR/SDK/gradle/wrapper/: gradle-wrapper.properties
SXR/SDK/sxrsdk/: build.gradle
SXR/SDK/sxrsdk/gradle/wrapper/: gradle-wrapper.properties
SXR/SDK/sxrsdk/src/main/java/com/samsungxr/: SXRBoxCollider.java  SXRCapsuleCollider.java  SXRComponent.java  SXRIndexBuffer.java  SXRLight.java  SXRMesh.java  SXRMeshCollider.java  SXRNode.java  (+8 more)
SXR/SDK/sxrsdk/src/main/jni/: Application.mk
SXR/SDK/sxrsdk/src/main/jni/gl/: gl_material.cpp  gl_render_data.cpp  gl_render_texture.cpp  gl_shader.cpp  gl_shader.h  gl_vertex_buffer.cpp  gl_vertex_buffer.h
SXR/SDK/sxrsdk/src/main/jni/objects/: data_descriptor.h  index_buffer.h  light.cpp  light.h  lightlist.cpp  mesh.cpp  mesh.h  mesh_jni.cpp  node.h  node_jni.cpp  render_pass_jni.cpp  scene.cpp  scene_jni.cpp  shader_data.cpp  uniform_block.cpp  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_jni.cpp
SXR/SDK/sxrsdk/src/main/jni/shaders/: matrix_calc.cpp  shader.cpp  shader_manager_jni.cpp
SXR/SDK/sxrsdk/src/main/jni/util/: jni_utils.cpp  jni_utils.h
SXR/SDK/sxrsdk/src/main/jni/vulkan/: vk_bitmap_image.cpp  vulkanCore.cpp  vulkanCore.h  vulkan_shader.cpp
SXR/SDK/sxrsdk/src/main/res/raw/: directshadowlight.fsh  pbr_addlight.fsh  spotshadowlight.fsh  vertex_template_multitex.vsh
(+68 files in other folders)
